gitlab/k8s/kubectl/_deprecated/postgresql/30-postgres-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: gitlab-postgres
  namespace: gitlab
  labels:
    app.kubernetes.io/name: postgres
    app.kubernetes.io/instance: postgres-gitlab
    app.kubernetes.io/version: "10.4"
    app.kubernetes.io/component: database
    app.kubernetes.io/part-of: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: postgres
  template:
    metadata:
      labels:
        app.kubernetes.io/name: postgres
    spec:
      containers:
        - name: postgres
          # image: postgres:10.15
          # image: postgres:11.10
          image: postgres:12.5
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgredb
      volumes:
        - name: postgredb
          persistentVolumeClaim:
            claimName: gitlab-postgres-pvc
